--- a/style/output/output.css
+++ b/style/output/output.css
@@ -154,7 +154,7 @@ html,
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: Inter, sans-serif;
+  font-family: Anonymous Pro, IBM Plex Sans, sans-serif;
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
